# egui-demo

./: Cargo.toml  egui-demo.code-workspace
.cargo/: config.toml
src/: main.rs
