[package]
name = "egui-demo"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23.0"
wgpu = "0.6.0"
image = "0.23.11"
egui = "0.3.0"
env_logger = "0.8.1"
log = "0.4.11"
futures = "0.3.7"
egui-winit = { path = "../egui-winit" }
egui-wgpu = { path = "../egui-wgpu" }

[profile.dev]
lto = false
incremental = true

[profile.release]
lto = true
incremental = true
